force-app/main/default/objects/Visit__c/fields/hospital__c.field-meta.xml
<CustomField>
    <fullName>hospital__c</fullName>
    <label>Hospital</label>
    <referenceTo>Hospital__c</referenceTo>
    <relationshipLabel>visits</relationshipLabel>
    <relationshipName>visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>