force-app/main/default/objects/Visit__c/fields/sales_Team__c.field-meta.xml
<CustomField>
    <fullName>sales_Team__c</fullName>
    <label>Sales Team</label>
    <referenceTo>Sales_Team__c</referenceTo>
    <relationshipLabel>visits</relationshipLabel>
    <relationshipName>visits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>