force-app/main/default/objects/Visit__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit#</label>
    <type>AutoNumber</type>
</CustomField>